--- a/docs/style.css
+++ b/docs/style.css
@@ -29,7 +29,7 @@
     margin-bottom: 2rem;
 }
   
-  header h1 { font-size: 2.5rem; margin-right: 1rem; }
+  header h1 { font-size: 2.5rem; }
   #controls {
     display: flex;
     justify-content: space-between;
